--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,6 @@
     position: relative;
     background-color: var(--primary-grey);
     cursor: url('#') 5 0, auto;
-    width: 100vw;
   }
 
   main {
@@ -139,7 +138,7 @@ h5 {
 }
 
 h6 {
-  line-height: 1.8rem;
+  line-height: 2rem;
   font-size: clamp(24px, 5vw, 28px);
   line-height: clamp(34px, 5vw, 38px);
 }
@@ -153,8 +152,8 @@ h6 {
 
 .h8 {
   font-family: 'azo-light';
-  color: var(--primary-light-grey);
-  letter-spacing: 5pt;
+  color: var(--secondary-light-grey);
+  letter-spacing: 4pt;
   font-size: clamp(12px, 5vw, 14px);
   text-align: left;
 }
@@ -211,7 +210,13 @@ text-align: center;
 
 .p3 {
 font-size: clamp(14px, 2vw, 18px);
+}
 
+.p4 {
+  font-size: .7rem;
+  text-transform: uppercase;
+  letter-spacing: 3pt;
+  font-family: 'azo-light';
 }
 
 
@@ -439,8 +444,75 @@ button {
   .btn-primary a{
     font-size: clamp(14px, 5vw, 18px);
     color: var(--primary-light-grey);
-
   }
+
+
+    /*Button Animated */
+
+
+@property --gradient-angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
+.btn-2 {
+  padding: 20px 40px;
+  /* background: linear-gradient(to top right, #0e0e0e, #292929); */
+  background: var(--secondary-grey);
+  position: relative;
+  color: white;
+  border: 0;
+  border-radius: 100rem;
+  transition: .3s ease;
+  font-size: 1rem;
+}
+
+.btn-2::before, .btn-2::after {
+  content: "";
+  position: absolute;
+  inset: -1px;
+  z-index: -1;
+  background: conic-gradient(
+    from var(--gradient-angle),
+    var(--secondary-light-grey),
+    #f8f8f8,
+    var(--secondary-light-grey)
+  );
+  border-radius: inherit;
+  animation: rotation 1s linear infinite;
+  transition: inset .4s ease;
+}
+
+.btn-2::after {
+  /* filter: blur(1rem); */
+}
+
+@keyframes rotation {
+  0% {
+    --gradient-angle: 0deg;
+  }
+  100% {
+    --gradient-angle: 360deg;
+  }
+}
+
+.btn-2:hover {
+  /* box-shadow: 5px 0 30px #5FBCFF20, -5px 0 30px #2469ff10; */
+  background-size: left;
+  cursor: pointer;
+  background: var(--alt-grey);
+
+}
+
+.btn-2:hover::after {
+  /* inset: -2px; */
+}
+
+.btn-2:hover::before {
+  inset: -2px;
+}
+  
 
   .hero, .hero-buttons, .hero-content {
     display: flex;
@@ -994,14 +1066,19 @@ button {
 
 /* Project Page Styling */
 
+.project-hero-container {
+  background: linear-gradient(to top, var(--primary-grey), var(--alt-grey));
+  margin-top: 0;
+}
+
 .project-hero {
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: clamp(50px, 5vw, 100px);
-  margin-top: clamp(50px, 5vw, 110px);
-  padding-top: clamp(110px, 8vw, 210px);
+  /* margin-top: clamp(50px, 5vw, 110px); */
+  padding-top: clamp(160px, 8vw, 310px);
   padding-right: clamp(1.8rem, 8vw, 4rem);
   padding-left: clamp(1.8rem, 8vw, 4rem);
   padding-bottom: clamp(25px, 5vw, 50px);
@@ -1048,9 +1125,95 @@ button {
 .main-section h6 {
   margin-bottom: clamp(20px, 5vw, 28px);
   margin-top: clamp(8px, 5vw, 12px);
+  line-height: clamp(2.4rem, 5vw, 2.8rem) ;
 
 }
 
+
+/*Project Info */
+
+.project-info-text {
+  display: flex;
+  justify-content: space-between;
+  padding-top: clamp(18px, 5vw, 30px);
+  padding-bottom: clamp(25px, 5vw, 30px);
+}
+
+.thin-line {
+
+  border: none;
+  border-top: 1px solid var(--alt-grey);
+}
+
+.project-info * {
+  text-align: left;
+  max-width: 740px;
+}
+
+.project-info-text, .thin-line {
+  margin: 0 auto;
+}
+
+.project-info {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.info-bold {
+  font-family: 'azo-bold';
+  padding-top: 8px;
+  color: var(--primary-light-grey);
+}
+
+/* Sub Section */
+
+.sub-section {
+  padding-top: 25px;
+  padding-bottom: clamp(25px, 5vw, 50px);
+}
+
+.sub-section h6 {
+  font-size: clamp(20px, 5vw, 22px);
+  line-height: clamp(32px, 5vw, 34px);
+  padding-bottom: 1rem;
+}
+
+.sub-section p {
+  text-align: left;
+}
+
+
+/* Number Section */
+
+.number-section {
+  display: flex;
+  position: relative;
+}
+
+.number-section img {
+  padding-right: 25px;
+}
+
+.number-section-text {
+  position: relative;
+}
+
+.project-image {
+  border-radius: clamp(2px, 5vw, 10px);
+  padding: clamp(25px, 5vw, 50px);
+  display: flex;
+  justify-content: center;
+}
+
+.project-image img{
+  max-width: 1100px;
+  width: 100%;
+  height: 100%;
+  border-radius: clamp(2px, 5vw, 10px);
+
+
+
+}
   
 
 
@@ -1199,10 +1362,37 @@ footer a {
 
 
 
+
+
   @media (max-width: 690px) {
     .service-card {
       max-width: none;
     }
+  }
+
+
+  @media (max-width: 600px) {
+
+    .project-info-text {
+      flex-direction: column;
+      gap: 30px;
+    }
+
+    .number-section img {
+      position: absolute;
+      height: 45px;
+      top: 8%;
+      
+      
+    }
+
+    .number-section h6 {
+      padding-left: 50px;
+    }
+  }
+
+  #three {
+    margin-top: 2%;
   }
 
 
