--- a/styles.css
+++ b/styles.css
@@ -1358,14 +1358,20 @@ button, .btn-2 {
 .project-nav-container {
   max-width: 1100px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   margin: 0 auto;
   gap: clamp(25px, 5vw, 30px);
+  padding: 0 30px;
+  justify-content: center;
+  align-content: center;
+  padding-top: clamp(25px, 5vw, 50px);
+  padding-bottom: clamp(25px, 5vw, 50px);
+
 }
 
 .project-card {
   /* aspect-ratio: 6 / 5; */
-  height: 340px;
+  height: 100%;
   width: 100%;
   border-radius: clamp(2px, 5vw, 10px);
   background-color: var(--secondary-grey);
@@ -1391,10 +1397,11 @@ button, .btn-2 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: .5s ease;
 }
 
 .pc-header {
-  padding-bottom: 16px;
+  padding-bottom: clamp(10px, 5vw, 16px);
 }
 
 .pc-header, .pc-subheader{
@@ -1403,6 +1410,10 @@ button, .btn-2 {
 
 .project-card:hover .arrow-pc {
   rotate: 0deg;
+}
+
+.project-card:hover .pc-img {
+  transform: scale(1.06);
 }
 
 
@@ -1529,9 +1540,15 @@ footer a {
 
   }
 
+
+
   @media (max-width: 1000px) {
     .project-card-2 {
       aspect-ratio: 5 / 6.5;
+    }
+
+    .project-nav-container {
+      grid-template-columns: repeat(2, 1fr);
     }
 
   }
@@ -1614,14 +1631,16 @@ footer a {
       max-width: 300px;
     }
 
-
-
     .hero .p2 {
       /* text-align: left; */
       max-width: 320px;
     }
 
     .hero-buttons {
+    }
+
+    .project-nav-container {
+      grid-template-columns: 1fr;
     }
 
   }
