--- a/styles.css
+++ b/styles.css
@@ -1251,6 +1251,8 @@ button, .btn-2 {
   overflow: hidden;
   flex-wrap: wrap;
   gap: clamp(30px, 5vw, 40px);
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .project-image, .img-columns {
