--- a/styles.css
+++ b/styles.css
@@ -919,6 +919,11 @@ button, .btn-2 {
     background: linear-gradient(to top, var(--secondary-grey), #4444d9b0);
   }
 
+  #katsbrune::before {
+    background: linear-gradient(to top, var(--secondary-grey), #445f72);
+
+  }
+
   .project-card-1:hover::before, .project-card-2:hover::before {
     opacity: .8;
   }
@@ -982,6 +987,10 @@ button, .btn-2 {
     transition: .5s ease;
     box-shadow: 0 0 4rem rgba(0, 0, 0, .2) ;
     background: transparent;
+  }
+
+  #katsbrune img {
+    border-radius: 0;
   }
 
   .project-card-1:hover .pc1-img {
