--- a/styles.css
+++ b/styles.css
@@ -1148,7 +1148,7 @@ button, .btn-2 {
   flex-direction: column;
   gap: clamp(50px, 5vw, 100px);
   /* margin-top: clamp(50px, 5vw, 110px); */
-  padding-top: clamp(160px, 8vw, 310px);
+  padding-top: clamp(140px, 10vw, 340px);
 
   padding-bottom: clamp(25px, 5vw, 50px);
 
@@ -1350,6 +1350,7 @@ button, .btn-2 {
   padding-top: clamp(25px, 5vw, 50px) !important;
 }
 
+
 #pad25 {
   padding-top: 25px;
 }
@@ -1398,6 +1399,20 @@ button, .btn-2 {
 }
 
 
+/* Alltech Flyers */
+
+.alltech-flyer-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: clamp(25px, 5vw, 40px);
+}
+
+.alltech-flyer-grid img {
+  width: 100%;
+  height: auto;
+}
+
+
 /* Project Nav buttons */
 
 .project-nav-buttons {
@@ -1422,18 +1437,42 @@ button, .btn-2 {
 /* Side Navigation */
 
 .side-nav {
-  position: fixed;
-  /* height: 100vh; */
   flex-direction: column;
   flex-wrap: wrap;
   display: flex;
   gap: 1.4rem;
   padding: 2rem 4rem;
-  z-index: 5;
   top: 50%; /* Start positioning from the middle of the viewport */
-  right: 0; /* Aligns the menu to the left side */
   transform: translateY(-50%); /* Centers the menu vertically */
 }
+
+.side-nav, .side-nav-2 {
+  position: fixed;
+  right: 0; /* Aligns the menu to the left side */
+  z-index: 5;
+
+}
+
+.side-nav img, .side-nav-2 img {
+  rotate: -90deg;
+}
+
+.side-nav a {
+  gap: 12px;
+  display: flex;
+}
+
+.side-nav-2 {
+  bottom: 0%; /* Start positioning from the middle of the viewport */
+  right: 0; /* Aligns the menu to the left side */
+  padding: 1rem;
+  background-color: var(--secondary-grey);
+  border: solid 1px var(--secondary-light-grey);
+  border-radius: 50px;
+  margin: 0 40px 40px 0;
+  display: none;
+}
+
 
 .side-nav a:hover {
   color: var(--primary-light-grey);
@@ -1442,6 +1481,10 @@ button, .btn-2 {
 @media (max-width: 1650px) {
   .side-nav {
     display: none;
+  }
+
+  .side-nav-2 {
+    display: block;
   }
 
   top: auto; /* Reset top position */
@@ -1724,6 +1767,14 @@ footer a {
     .solution-card {
       width: 100%;
       height: auto;
+    }
+
+    .side-nav-2 {
+      margin: 0 20px 20px 0;
+    }
+
+    .alltech-flyer-grid {
+      grid-template-columns: 1fr;
     }
   }
 
