--- a/styles.css
+++ b/styles.css
@@ -1097,10 +1097,22 @@ button, .btn-2 {
   position: relative;
  }
 
+#skill-1, #skill-2, #skill-3 {
+  z-index: 5;
+}
 
- #ae-icon-box {
-  z-index: 3;
- }
+#skill-4, #skill-5, #skill-6 {
+  z-index: 4
+}
+
+#skill-7 {
+  z-index: 3
+}
+
+#skill-8, #skill-9 {
+  z-index: 2;
+}
+
 
  .icon-box:hover {
   scale: 1.04;
@@ -1528,6 +1540,7 @@ button, .btn-2 {
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  border: solid 1px var(--alt-grey);
 
 }
 
@@ -1572,7 +1585,22 @@ button, .btn-2 {
 
 
 
+/* The Vautl Projects */
 
+.vault-projects {
+  max-width: 1100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  gap: 25px;
+  margin: 0 auto;
+}
+
+.vault-img {
+  width: 100%;
+  height: auto;
+  align-self: start;
+}
 
 
 
@@ -1598,7 +1626,7 @@ footer {
   padding-bottom: clamp(4rem, 5vw, 8rem);
   padding-left: 30px;
   padding-right: 30px;
-  margin-top: clamp(100px, 5vw, 200px);
+  margin-top: clamp(50px, 5vw, 200px);
   background-color: var(--secondary-grey);
   /* margin-top: clamp(4rem, 5vw, 8rem); */
   max-width: 100%;
@@ -1742,6 +1770,11 @@ footer a {
     .service-card {
       max-width: none;
     }
+
+    .vault-projects {
+      grid-template-columns: repeat(2, 1fr);
+
+    }
   }
 
 
@@ -1807,6 +1840,11 @@ footer a {
       grid-template-columns: 1fr;
     }
 
+
+    .vault-projects {
+      grid-template-columns: repeat(1, 1fr);
+
+    }
   }
 
   @media (max-width: 370px) {
