--- a/styles.css
+++ b/styles.css
@@ -475,19 +475,22 @@ button, .btn-2 {
 
   .btn-primary {
     color: var(--primary-light-grey);
-    padding: 1.2rem 2rem;
+    padding-top: clamp(.8rem, 5vw, 1rem);
+    padding-bottom: clamp(.8rem, 5vw, 1rem);
+    padding-left: clamp(1.8rem, 5vw, 2rem);
+    padding-right: clamp(1.8rem, 5vw, 2rem);
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 4.0625rem;
     border: 1px solid var(--Secondary-light-Grey, #B5B5B5);
     background: var(--Secondary-Grey, #19191B);
-    font-size: clamp(14px, 5vw, 18px);
+    font-size: clamp(16px, 3vw, 18px);
     font-family: 'azo-light';
     transition: .5s ease;
     cursor: pointer;
     line-height: 2rem;
-    gap: .6rem;
+    gap: .8rem;
   }
 
 
@@ -496,8 +499,12 @@ button, .btn-2 {
   }
 
   .btn-primary a{
-    font-size: clamp(14px, 5vw, 18px);
+    /* font-size: clamp(14px, 5vw, 18px); */
     color: var(--primary-light-grey);
+  }
+
+  #download-icon {
+    height: clamp(14px, 5vw, 16px);
   }
 
 
@@ -628,8 +635,8 @@ button, .btn-2 {
   }
 
   .hero h1 {
-    margin-bottom: clamp(16px, 2vw, 26px);
-    margin-top: clamp(4px, 2vw, 14px);
+    margin-bottom: clamp(16px, 2vw, 22px);
+    margin-top: clamp(0px, 2vw, 8px);
   }
 
 
@@ -922,7 +929,7 @@ button, .btn-2 {
 
 
   #LLP::before {
-    background: linear-gradient(to top, var(--secondary-grey), #103461);
+    background: linear-gradient(to top, var(--secondary-grey), #103f79);
   }
 
   #pc::before {
@@ -1433,10 +1440,12 @@ button, .btn-2 {
   flex-wrap: wrap;
   width: 100%;
   padding-top: clamp(50px, 5vw, 100px);
+  padding-bottom: clamp(25px, 5vw, 50px);
+
 }
 
 .project-nav-buttons button {
-  width: 206px;
+  width: 210px;
 }
 
 @media (max-width: 780px) {
@@ -1513,6 +1522,10 @@ button, .btn-2 {
   white-space: nowrap; /* Prevent wrapping of list items */
   scrollbar-width: none; /* Hide scrollbars for modern browsers */
   -ms-overflow-style: none; /* Hide scrollbars for IE and Edge */
+}
+
+#scroll-margin {
+  scroll-margin-top: 600px;
 }
 
 
@@ -1603,6 +1616,159 @@ button, .btn-2 {
 }
 
 
+
+/* Contact Page Styling */
+
+.contact-socials .icon-border  {
+  height: 3.6rem;
+  width: 3.6rem;
+
+}
+
+.contact-socials  {
+  gap: 20px !important;
+  display: flex;
+}
+
+.contact-socials .icon-border img {
+  width: 1.6rem !important;
+}
+
+
+
+/* Gallery Popup */
+
+.gallery {
+  max-width: 1100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  gap: 25px;
+  margin: 0 auto;
+}
+
+.vault-img {
+  transition: 1s;
+}
+
+
+/* Pop up */
+
+/* .popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: 100vw;
+  height: 100vh;
+  border-radius: 20px;
+  background: rgba(0, 0, 0, .75);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  z-index: 1000;
+  transition: 1s;
+  padding-top: clamp(30px, 5vw, 50px);
+  padding-bottom: clamp(30px, 5vw, 50px);
+
+}
+
+.popup.active {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+
+.popup.active .top-bar,
+.popup.active .large-image,
+.popup.active .arrow-btn {
+  opacity: 1;
+  transition: opacity .5s;
+  transition-delay: 1s;
+}
+
+
+.top-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  color: var(--primary-light-grey);
+  text-align: center;
+  line-height: 50px;
+  padding-top: 50px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  width: clamp(40px, 5vw, 50px);
+  height: clamp(40px, 5vw, 50px);
+  border-radius: 50%;
+  background: #f00;
+  cursor: pointer;
+  margin: 30px;
+}
+
+.arrow-btn {
+
+  padding: 20px;
+  border-radius: 50%;
+  border: solid 1px var(--alt-grey);
+  background-color: var(--secondary-grey);
+  cursor: pointer;
+  transition:  300ms ease;
+}
+
+.arrow-container {
+
+  display: flex;
+  gap: clamp(25px, 5vw, 50px);
+  justify-content: center;
+  margin-top: clamp(25px, 5vw, 50px);
+  margin-bottom: clamp(50px, 5vw, 100px);
+
+}
+
+
+
+
+.index {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  margin: 30px;
+
+}
+
+.large-image {
+  margin-top: 5%;
+  width: 80%;
+  max-height: 80%; 
+ object-fit: contain;
+  display: flex;
+  margin: 0 auto;
+  margin-top: 5%;
+}
+
+.index, .large-image, .arrow-btn, .top-bar, .popup {
+  opacity: 0;
+
+
+}
+
+
+.arrow-btn:hover {
+  background: var(--alt-grey);
+}
+
+.arrow-btn img {
+  height: 25px;
+  width: auto;
+} */
 
 
 
