--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,10 @@ font-size: clamp(14px, 2vw, 18px);
 nav {
   width: 100%;
   display: flex;
-  padding: 2rem 4rem;
+  padding: 2rem 0;
+  padding-right: clamp(30px, 5vw, 4rem);
+  padding-left: clamp(30px, 5vw, 4rem);
+
   justify-content: space-between;
   align-items: center;
   background: linear-gradient(to bottom, var(--primary-grey), rgba(0, 0, 0, 0));
@@ -288,7 +291,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 8;
+  z-index: 20001;
 }
 
 
@@ -346,18 +349,19 @@ a {
   position: fixed;
   right: 0;
   top: 0;
-  background-color: var(--primary-grey);
+  background-color: rgba(0, 0, 0, .9);
   padding: 110px 0;
   gap: 4rem;
   transition: transform 0.3s ease;
   transform: translateX(100%); /* Hidden by default */
+  z-index: 2000;
   
 }
 
-.mobile-menu.show {
-  display: flex; /* Ensure it's visible */
-  transform: translateX(0); /* Slide in */
-}
+/* .mobile-menu.show {
+  display: flex; 
+  transform: translateX(0); 
+} */
 
 
 .mobile-nav-links ul {
@@ -405,12 +409,13 @@ a {
 .menu {
   position: relative;
   width: 35px;
-  height: 25px;
+  height: clamp(20px, 5vw, 25px);
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   display: none;
+  margin-bottom: 2%;
 }
 
 /* Style for the three hamburger bars */
@@ -437,7 +442,7 @@ a {
 }
 
 /* When the menu is active, animate the bars */
-    /* .menu.active .bar1 {
+    .menu.active .bar1 {
       transform: rotate(45deg);
       top: 45%;
     }
@@ -449,7 +454,7 @@ a {
     .menu.active .bar3 {
       transform: rotate(-45deg);
       bottom: 45%;
-    } */
+    }
 
 .nav-links a:hover, .mobile-nav-links a:hover {
   color: var(--primary-light-grey);
@@ -1167,7 +1172,7 @@ button, .btn-2 {
   flex-direction: column;
   gap: clamp(50px, 5vw, 100px);
   /* margin-top: clamp(50px, 5vw, 110px); */
-  padding-top: clamp(140px, 10vw, 340px);
+  padding-top: clamp(140px, 10vw, 200px);
 
   padding-bottom: clamp(25px, 5vw, 50px);
 
