--- a/styles.css
+++ b/styles.css
@@ -299,6 +299,12 @@ nav {
 .nav-logo img {
   height: clamp(1.6rem, 5vw, 2rem);
   margin-bottom: clamp(4px, 2vw, 16px);
+  transition: 300ms ease;
+}
+
+.nav-logo img:hover {
+  transform: rotateY(15deg);
+  /* filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.2)) ; */
 }
 
 a {
@@ -628,7 +634,7 @@ button, .btn-2 {
     flex-direction: column;
     margin-top: clamp(6rem, 5vw, 100px);
     padding-top: clamp(3rem, 8vw, 18rem);
-    padding-bottom: clamp(3rem, 8vw, 18rem);
+    padding-bottom: clamp(5rem, 8vw, 18rem);
     z-index: 2;
 
 
@@ -1352,7 +1358,7 @@ button, .btn-2 {
 
 }
 
-.project-image img{
+.project-image img, .project-image video{
   max-width: 1100px;
   width: 100%;
   height: 100%;
@@ -1380,6 +1386,8 @@ button, .btn-2 {
   margin-top:  clamp(25px, 5vw, 50px);
   margin-bottom:  clamp(25px, 5vw, 50px);
 }
+
+
 
 .solution-card {
   flex: 1 1 1;
@@ -1540,20 +1548,6 @@ button, .btn-2 {
     display: block;
   }
 
-  top: auto; /* Reset top position */
-  bottom: 0; /* Fix to the bottom */
-  width: 100%; /* Make it span the full width of the viewport */
-  transform: none; /* Remove the transform property */
-  display: flex; /* Change layout for the bottom nav */
-  justify-content: center; /* Center items horizontally */
-  flex-direction: row;
-  background-color: var(--secondary-grey);
-  flex-wrap: nowrap;
-
-  overflow-x: auto; /* Enable horizontal scrolling */
-  white-space: nowrap; /* Prevent wrapping of list items */
-  scrollbar-width: none; /* Hide scrollbars for modern browsers */
-  -ms-overflow-style: none; /* Hide scrollbars for IE and Edge */
 }
 
 .scroll-margin {
@@ -1683,126 +1677,75 @@ button, .btn-2 {
   transition: 1s;
 }
 
+.gallery-img img {
+  cursor: pointer;
+  transition: 500ms ease;
+}
 
-/* Pop up */
+.gallery-img {
+  object-fit: cover;
+  overflow: hidden;
+  position: relative;
+}
 
-/* .popup {
+.gallery-img img:hover {
+  transform: scale(1.02);
+}
+
+.popup-image {
   position: fixed;
+  top: 0; 
+  left: 0;
+  background: rgba(0, 0, 0, .9);
+  height: 100%;
+  width: 100%;
+  z-index: 110000;
+  display: none;
+}
+
+.popup-image span {
+
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 60px;
+  font-weight: bolder;
+  color: #fff;
+  cursor: pointer;
+  z-index: inherit;
+  padding: 2rem;
+
+}
+
+.popup-image img {
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  width: 100vw;
-  height: 100vh;
-  border-radius: 20px;
-  background: rgba(0, 0, 0, .75);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  z-index: 1000;
-  transition: 1s;
-  padding-top: clamp(30px, 5vw, 50px);
-  padding-bottom: clamp(30px, 5vw, 50px);
-
+  transform: translate(-50%, -50%);
+  object-fit: contain;
+  max-height: 90vh;
+  height: 100%;
+  width: 100%;
+  padding: 0 30px;
 }
 
-.popup.active {
-  transform: translate(-50%, -50%) scale(1);
-  opacity: 1;
-}
-
-.popup.active .top-bar,
-.popup.active .large-image,
-.popup.active .arrow-btn {
-  opacity: 1;
-  transition: opacity .5s;
-  transition-delay: 1s;
-}
-
-
-.top-bar {
+.gallery-img::before {
+  content: ''; /* Required for pseudo-elements */
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 50px;
-  color: var(--primary-light-grey);
-  text-align: center;
-  line-height: 50px;
-  padding-top: 50px;
-}
-
-.close-btn {
-  position: absolute;
-  top: 15px;
-  right: 20px;
-  width: clamp(40px, 5vw, 50px);
-  height: clamp(40px, 5vw, 50px);
-  border-radius: 50%;
-  background: #f00;
-  cursor: pointer;
-  margin: 30px;
-}
-
-.arrow-btn {
-
-  padding: 20px;
-  border-radius: 50%;
-  border: solid 1px var(--alt-grey);
-  background-color: var(--secondary-grey);
-  cursor: pointer;
-  transition:  300ms ease;
-}
-
-.arrow-container {
-
-  display: flex;
-  gap: clamp(25px, 5vw, 50px);
-  justify-content: center;
-  margin-top: clamp(25px, 5vw, 50px);
-  margin-bottom: clamp(50px, 5vw, 100px);
-
-}
-
-
-
-
-.index {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  margin: 30px;
-
-}
-
-.large-image {
-  margin-top: 5%;
-  width: 80%;
-  max-height: 80%; 
- object-fit: contain;
-  display: flex;
-  margin: 0 auto;
-  margin-top: 5%;
-}
-
-.index, .large-image, .arrow-btn, .top-bar, .popup {
+  width: 120%;
+  height: 120%;
+  pointer-events: none;
   opacity: 0;
-
-
+  z-index: 10;
+  transition: 500ms ease;
+  background: rgb(255, 255, 255); /* Adjust color and opacity for overlay */
 }
 
-
-.arrow-btn:hover {
-  background: var(--alt-grey);
+.gallery-img:hover::before {
+  opacity: .2;
 }
-
-.arrow-btn img {
-  height: 25px;
-  width: auto;
-} */
-
-
 
 
 
