--- a/styles.css
+++ b/styles.css
@@ -296,7 +296,7 @@ nav {
 
 
 .nav-logo img {
-  height: clamp(1.6rem, 5vw, 2rem);
+  height: clamp(1.4rem, 5vw, 2rem);
   margin-bottom: clamp(4px, 2vw, 16px);
   transition: 300ms ease;
 }
@@ -348,15 +348,14 @@ a {
 .mobile-menu {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   height: 100vh;
-  width: clamp(20rem, 5vw, 24rem);
+  width: 400px;
   position: fixed;
   right: 0;
   top: 0;
-  background-color: #121314ee;
-  padding: 110px 0;
+  background-color: #121314;
+  padding: 60px 60px;
   gap: 4rem;
   transition: transform 0.3s ease;
   transform: translateX(100%);
@@ -376,21 +375,59 @@ a {
 
 .mobile-nav-links {
   padding: 0;
+  margin: auto 0;
+}
+
+.mobile-nav-links a {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
 .mobile-nav-links li {
   font-size: 1.3rem;
+  font-weight: bold;
 }
+
+.mobile-nav-links img {
+}
+
 
 .mobile-social-icons img {
   height: 25px;
 }
 
-.mobile-social-icons {
+#email-nav-icon {
+  height: 22px;
+}
+
+#ig-nav-icon {
+  height: 28px;
+}
+
+.mobile-menu h6 {
+  font-size: 1rem;
+  font-family: 'azo';
+  color: var(--secondary-light-grey);
+  letter-spacing: 4px;
+}
+
+#nav-social-type {
+  margin-bottom: 35px;
+}
+
+#nav-menu-type {
+  margin-bottom: 10px;
+}
+
+
+
+
+.mobile-social-links {
   display: flex;
   gap: 1.2rem;
-
 }
+
 
 .mobile-menu li {
   list-style: none;
@@ -399,11 +436,22 @@ a {
 .mobile-menu ul {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 }
 
 .mobile-menu a {
   text-decoration: none;
+}
+
+
+.mobile-social-bg {
+  background: var(--alt-grey);
+  height: 70px;
+  width: 70px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* .show2 {
@@ -415,7 +463,7 @@ a {
 .menu {
   position: relative;
   width: 35px;
-  height: clamp(20px, 5vw, 25px);
+  height: 25px;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -435,7 +483,7 @@ a {
 }
 
 .bar1 {
-  top: 0;
+  top: 5px;
 }
 
 .bar2 {
@@ -444,7 +492,9 @@ a {
 }
 
 .bar3 {
-  bottom: 0;
+  bottom: 5px;
+  width: 85%;
+  margin-left: 15%;
 }
 
 /* When the menu is active, animate the bars */
@@ -460,6 +510,9 @@ a {
     .menu.active .bar3 {
       transform: rotate(-45deg);
       bottom: 45%;
+      width: 100%;
+      margin-left: 0;
+      height: 3px;
     }
 
 .nav-links a:hover, .mobile-nav-links a:hover {
@@ -1973,6 +2026,10 @@ footer a {
 
     .alltech-flyer-grid {
       grid-template-columns: 1fr;
+    }
+
+    .mobile-menu {
+      width: 100vw;
     }
   }
 
