--- a/styles.css
+++ b/styles.css
@@ -717,7 +717,7 @@ button, .btn-2 {
   }
 
   .hero h1 {
-    margin-bottom: clamp(14px, 2vkkkkkkkkkkkkkkkkkkkkkw, 22px);
+    margin-bottom: clamp(14px, 2vw, 22px);
     margin-top: clamp(4px, 2vw, 8px);
   }
 
@@ -793,7 +793,7 @@ button, .btn-2 {
 }
 
 .sub-title img {
-  margin-bottom: 1.3%;
+  margin-bottom: 6px;
 }
 
 .hero-2 p {
