--- a/styles.css
+++ b/styles.css
@@ -679,6 +679,23 @@ button, .btn-2 {
     overflow: hidden;
   }
 
+  .polaroid-photos {
+    opacity: 0 !important;
+    position: absolute;
+    width: 375px !important;
+    transition: .5s;
+    margin-bottom: 60%;
+
+  }
+  
+  .hero h1:hover ~ .polaroid-photos {
+    opacity: 1 !important;
+    margin-top: 0px;
+    margin-bottom: 72%;
+
+  }
+
+ 
 
 
   .hero-content {
@@ -688,6 +705,7 @@ button, .btn-2 {
     padding-top: clamp(3rem, 8vw, 18rem);
     padding-bottom: clamp(5rem, 8vw, 18rem);
     z-index: 2;
+    position: relative;
 
 
   }
@@ -714,11 +732,19 @@ button, .btn-2 {
     line-height: 1.6rem;
     letter-spacing: 3px;
     font-weight: bold;
+    opacity: 1;
+    transition: opacity .5s ease;
   }
 
   .hero h1 {
     margin-bottom: clamp(14px, 2vw, 22px);
     margin-top: clamp(4px, 2vw, 8px);
+    transition: 500ms;
+    z-index: 3000;
+  }
+
+  .hero h1:hover {
+    transform: scale(1.02);
   }
 
 
