--- a/styles.css
+++ b/styles.css
@@ -2120,7 +2120,7 @@ footer a {
   @media (max-width: 470px) {
     .hero-content h1 {
       max-width: 300px;
-      margin-top: 0;
+      margin-top: 4px;
     }
 
     .hero .p2 {
