--- a/styles.css
+++ b/styles.css
@@ -390,7 +390,7 @@ a {
 }
 
 .mobile-nav-links li {
-  font-size: 1.3rem;
+  font-size: clamp(1.2rem, 8vw, 1rem);
   font-weight: bold;
 }
 
@@ -422,7 +422,7 @@ a {
 }
 
 #nav-menu-type {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 
