--- a/styles.css
+++ b/styles.css
@@ -897,7 +897,7 @@ button, .btn-2 {
 
 
 
-  /* notice message */
+  /* notice message update with css*/
 
   .notice-message {
     max-width: 1100px;
